--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap');
+.platypi{
+
+        font-family: "Platypi", serif;
+        font-optical-sizing: auto;
+        font-style: normal;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -6,13 +14,14 @@
     border: none;
     outline: none;
     scroll-behavior: smooth;
-    font-family: "Poppins", sans-serif;
+    
 }
+
 :root {
     --bg-color: #080808;
     --secondary-bd-color: #121212;
     --text-color: #e4e4e4;
-    --main-color: #357cbe;
+    --main-color: #275179;
 }
 html{
     overflow-x: hidden;
