feat: Termino da header

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,7 +21,7 @@
     --bg-color: #080808;
     --secondary-bd-color: #121212;
     --text-color: #e4e4e4;
-    --main-color: #275179;
+    --main-color: #315f8a;
 }
 html{
     overflow-x: hidden;
@@ -30,4 +30,49 @@ html{
 body{
     background-color: var(--bg-color);
     color: var(--text-color);
+}
+
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 2rem 9rem;
+    background-color: rgba(6, 31, 85, 0.635);
+    backdrop-filter: blur(10px);
+    display: flex;
+    justify-content: space-between; /*alinha os elementos um ao lado do outro no eixo horizontal*/
+    align-items: center;/*alinha os elementos no centro no eixo vertical*/
+    z-index: 1000;
+}
+.logo {
+    font-size: 2rem;
+    color: var(--text-color);
+    font-weight: 500;
+    cursor: pointer;
+    transition: 0.3s ease;
+
+}
+.logo:hover {
+    transform: scale(1.03);
+}
+
+.logo span {
+    text-shadow: 0 0 5px var(--main-color)
+}
+
+.navbar a {
+    font-size: 1.2rem;
+    color: var(--text-color);
+    margin-left: 4rem;
+    font-weight: 500;
+    transition: 0.3s ease;
+    border-bottom: 3px solid transparent;
+    border-radius: 3px;
+}
+
+.navbar a:hover ,
+.navbar a.active {
+color: var(--main-color);
+border-bottom: 3px solid var(--main-color);
 }
